RESOLVED FIXED192785
Calling setValue() while typing should invoke -textDidChangeInTextField in the injected bundle
https://bugs.webkit.org/show_bug.cgi?id=192785
Summary Calling setValue() while typing should invoke -textDidChangeInTextField in th...
Wenson Hsieh
Reported 2018-12-17 16:21:48 PST
Attachments
Patch (8.42 KB, patch)
2018-12-17 16:30 PST, Wenson Hsieh
no flags
Patch (8.38 KB, patch)
2018-12-17 22:26 PST, Wenson Hsieh
no flags
Wenson Hsieh
Comment 1 2018-12-17 16:30:39 PST
Wenson Hsieh
Comment 2 2018-12-17 22:26:12 PST
WebKit Commit Bot
Comment 3 2018-12-18 07:37:18 PST
Comment on attachment 357537 [details] Patch Clearing flags on attachment: 357537 Committed r239337: <https://trac.webkit.org/changeset/239337>
WebKit Commit Bot
Comment 4 2018-12-18 07:37:19 PST
All reviewed patches have been landed. Closing bug.
Truitt Savell
Comment 5 2018-12-18 15:07:03 PST
Looks like revision https://trac.webkit.org/changeset/239337/webkit is causing fast/forms/datalist/datalist-textinput-suggestions-order.html to crash intermittently. History: https://webkit-test-results.webkit.org/dashboards/flakiness_dashboard.html#showAllRuns=true&tests=fast%2Fforms%2Fdatalist%2Fdatalist-textinput-suggestions-order.html I was able to reproduce this crash with: run-webkit-tests --root testbuild-239337 fast/forms/datalist/datalist-textinput-suggestions-order.html --iterations 500 -f The crash happens on r239337 but not on r239336 Crash Log: https://build.webkit.org/results/Apple%20Mojave%20Release%20WK2%20(Tests)/r239349%20(1465)/fast/forms/datalist/datalist-textinput-suggestions-order-crash-log.txt
Wenson Hsieh
Comment 6 2018-12-18 15:08:15 PST
(In reply to Truitt Savell from comment #5) > Looks like revision https://trac.webkit.org/changeset/239337/webkit > > is causing fast/forms/datalist/datalist-textinput-suggestions-order.html > > to crash intermittently. > > History: > https://webkit-test-results.webkit.org/dashboards/flakiness_dashboard. > html#showAllRuns=true&tests=fast%2Fforms%2Fdatalist%2Fdatalist-textinput- > suggestions-order.html > > I was able to reproduce this crash with: > run-webkit-tests --root testbuild-239337 > fast/forms/datalist/datalist-textinput-suggestions-order.html --iterations > 500 -f > > The crash happens on r239337 but not on r239336 > > Crash Log: > https://build.webkit.org/results/Apple%20Mojave%20Release%20WK2%20(Tests)/ > r239349%20(1465)/fast/forms/datalist/datalist-textinput-suggestions-order- > crash-log.txt Interesting! Taking a look now.
Truitt Savell
Comment 7 2018-12-18 16:04:53 PST
This test is affected too fast/forms/datalist/datalist-textinput-keydown.html Hsitory: https://webkit-test-results.webkit.org/dashboards/flakiness_dashboard.html#showAllRuns=true&tests=fast%2Fforms%2Fdatalist%2Fdatalist-textinput-keydown.html same repro steps work
Wenson Hsieh
Comment 8 2018-12-18 16:17:16 PST
(In reply to Truitt Savell from comment #7) > This test is affected too fast/forms/datalist/datalist-textinput-keydown.html > > Hsitory: > https://webkit-test-results.webkit.org/dashboards/flakiness_dashboard. > html#showAllRuns=true&tests=fast%2Fforms%2Fdatalist%2Fdatalist-textinput- > keydown.html > > same repro steps work Looks to be the same root cause — I'll fix both in https://bugs.webkit.org/show_bug.cgi?id=192836.
Note You need to log in before you can comment on or make changes to this bug.